--- a/html/soporte.html
+++ b/html/soporte.html
@@ -134,7 +134,7 @@
                         <li><i class="fas fa-check"></i> Problemas de autenticación</li>
                     </ul>
                     <button class="btn-soporte" onclick="abrirWhatsApp('Soporte para Middleware')">
-                        <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
+                        <i class="fab fa-whatsapp"></i> Solicitar Soporte
                     </button>
                 </div>
             </div>
