--- a/html/soporte.html
+++ b/html/soporte.html
@@ -14,7 +14,9 @@
         <div class="container">
             <h1>Soporte Técnico Especializado</h1>
             <p>Soluciones profesionales para tus sistemas de televisión y redes</p>
-            <a href="/index.html"btn-volver"><i class="fas fa-arrow-left"></i> Volver al inicio</a>
+            <a href="../index.html" class="btn-volver">
+                <i class="fas fa-arrow-left"></i> Volver al inicio
+            </a>
         </div>
     </header>
 
