--- a/html/soporte.html
+++ b/html/soporte.html
@@ -27,12 +27,12 @@
         </div>
 
         <div class="filtros-soporte">
-            <input type="text" id="buscador-soporte" placeholder="🔍 Buscar servicio..." onkeyup="filtrarServicios()">
+            <input type="text" id="buscador-soporte" placeholder="🔍 Buscar servicio...">
             <div class="filtro-categorias">
-                <button class="filtro-btn active" data-categoria="todos" onclick="filtrarServiciosPorCategoria('todos')">Todos</button>
-                <button class="filtro-btn" data-categoria="tv" onclick="filtrarServiciosPorCategoria('tv')">TV</button>
-                <button class="filtro-btn" data-categoria="servidores" onclick="filtrarServiciosPorCategoria('servidores')">Servidores</button>
-                <button class="filtro-btn" data-categoria="redes" onclick="filtrarServiciosPorCategoria('redes')">Redes</button>
+                <button class="filtro-btn active" data-categoria="todos">Todos</button>
+                <button class="filtro-btn" data-categoria="tv">TV</button>
+                <button class="filtro-btn" data-categoria="servidores">Servidores</button>
+                <button class="filtro-btn" data-categoria="redes">Redes</button>
             </div>
         </div>
 
@@ -50,7 +50,7 @@
                         <li><i class="fas fa-check"></i> Actualizaciones</li>
                         <li><i class="fas fa-check"></i> Optimización de performance</li>
                     </ul>
-                    <button class="btn-soporte" onclick="abrirWhatsApp('Soporte para Astra')">
+                    <button class="btn-soporte">
                         <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
                     </button>
                 </div>
@@ -69,7 +69,7 @@
                         <li><i class="fas fa-check"></i> Problemas de conexión</li>
                         <li><i class="fas fa-check"></i> Balanceo de carga</li>
                     </ul>
-                    <button class="btn-soporte" onclick="abrirWhatsApp('Soporte para Xtream UI')">
+                    <button class="btn-soporte">
                         <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
                     </button>
                 </div>
@@ -88,7 +88,7 @@
                         <li><i class="fas fa-check"></i> Optimización de servidores</li>
                         <li><i class="fas fa-check"></i> Resolución de problemas</li>
                     </ul>
-                    <button class="btn-soporte" onclick="abrirWhatsApp('Soporte para Ubuntu Server')">
+                    <button class="btn-soporte">
                         <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
                     </button>
                 </div>
@@ -107,7 +107,7 @@
                         <li><i class="fas fa-check"></i> VPN (PPTP, L2TP, SSTP)</li>
                         <li><i class="fas fa-check"></i> Optimización de redes</li>
                     </ul>
-                    <button class="btn-soporte" onclick="abrirWhatsApp('Soporte para MikroTik')">
+                    <button class="btn-soporte">
                         <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
                     </button>
                 </div>
@@ -126,7 +126,7 @@
                         <li><i class="fas fa-check"></i> Problemas de conectividad</li>
                         <li><i class="fas fa-check"></i> Monitoreo y mantenimiento</li>
                     </ul>
-                    <button class="btn-soporte" onclick="abrirWhatsApp('Soporte para OLTs')">
+                    <button class="btn-soporte">
                         <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
                     </button>
                 </div>
@@ -145,7 +145,7 @@
                         <li><i class="fas fa-check"></i> Configuraciones avanzadas</li>
                         <li><i class="fas fa-check"></i> Problemas de autenticación</li>
                     </ul>
-                    <button class="btn-soporte" onclick="abrirWhatsApp('Soporte para Middleware')">
+                    <button class="btn-soporte">
                         <i class="fab fa-whatsapp"></i> Solicitar Soporte
                     </button>
                 </div>
