--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Fuente elegante tipo serif -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome para iconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
@@ -60,22 +62,38 @@
     <!-- NOSOTROS -->
     <section id="nosotros">
         <h2>¿Quiénes Somos?</h2>
-        <p>Con una fuerte pasión por la tecnología y las telecomunicaciones, brindamos soluciones personalizadas y confiables que se adaptan a los desafíos de cada proyecto, respaldados por años de experiencia..</p>
+        <p>Con una fuerte pasión por la tecnología y las telecomunicaciones, brindamos soluciones personalizadas y confiables que se adaptan a los desafíos de cada proyecto, respaldados por años de experiencia.</p>
     </section>
 
     <!-- CONTACTO -->
     <section id="contacto">
         <h2><i class="fas fa-envelope"></i> Contacto</h2>
-        <p>¿Quieres empezar? Escríbenos por WhatsApp o correo electrónico:</p>
+        <p class="contacto-subtitulo">¿Listo para transformar tu experiencia de entretenimiento? Contáctanos ahora</p>
+        
         <div class="contacto-info">
             <div class="contacto-item">
-                <a href="https://wa.me/3011382447" target="_blank" class="btn-whatsapp">
-                    <i class="fab fa-whatsapp"></i> WhatsApp: 3011382447
+                <a href="https://wa.me/3011382447" target="_blank" class="btn-contacto btn-whatsapp">
+                    <div class="btn-icono">
+                        <i class="fab fa-whatsapp"></i>
+                    </div>
+                    <div class="btn-contenido">
+                        <span class="btn-titulo">Chat en WhatsApp</span>
+                        <span class="btn-descripcion">Respuesta inmediata</span>
+                    </div>
+                    <i class="fas fa-arrow-right btn-flecha"></i>
                 </a>
             </div>
+            
             <div class="contacto-item">
-                <a href="mailto:contacto@astratech.com" class="btn-email">
-                    <i class="fas fa-envelope"></i> Email: contacto@astratech.com
+                <a href="mailto:contacto@astratech.com" class="btn-contacto btn-email">
+                    <div class="btn-icono">
+                        <i class="fas fa-envelope"></i>
+                    </div>
+                    <div class="btn-contenido">
+                        <span class="btn-titulo">Envíanos un Email</span>
+                        <span class="btn-descripcion">contacto@astratech.com</span>
+                    </div>
+                    <i class="fas fa-arrow-right btn-flecha"></i>
                 </a>
             </div>
         </div>
