--- a/html/licencia.html
+++ b/html/licencia.html
@@ -169,8 +169,12 @@
         <div class="container">
             <p>&copy; 2025 Astratech Systems. Todos los derechos reservados.</p>
             <div class="footer-contacto">
-                <a href="https://wa.me/3011382447" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-                <a href="mailto:contacto@astratech.com"><i class="fas fa-envelope"></i> Email</a>
+                <a href="https://wa.me/573011382447" target="_blank" class="btn-whatsapp">
+                    <i class="fab fa-whatsapp"></i> Soporte por WhatsApp
+                </a>
+                <a href="mailto:soporte@astratech.com" class="btn-email">
+                    <i class="fas fa-envelope"></i> Soporte por Email
+                </a>
             </div>
         </div>
     </footer>
