--- a/html/soporte.html
+++ b/html/soporte.html
@@ -59,7 +59,7 @@
             <!-- Soporte Xtream UI -->
             <div class="soporte-card" data-categoria="tv" data-nombre="xtream ui">
                 <div class="soporte-imagen">
-                    <img src="https://avatars.githubusercontent.com/u/82150075?v=4" alt="Soporte Xtream UI" loading="lazy">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBAmt57VOCd-PqLRi1XXLjH7m1uWZqzJ42NQYOm4G0VRPmdRwjgdSB8AGPo6nPKpTc2aY&usqp=CAU" alt="Soporte Xtream UI" loading="lazy">
                 </div>
                 <div class="soporte-contenido">
                     <h3>Soporte Xtream UI</h3>
