--- a/html/soporte.html
+++ b/html/soporte.html
@@ -78,7 +78,7 @@
             <!-- Soporte Ubuntu Server -->
             <div class="soporte-card" data-categoria="servidores" data-nombre="ubuntu server">
                 <div class="soporte-imagen">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Ubuntu-logo-2022.svg/1920px-Ubuntu-logo-2022.svg.png" alt="Soporte Ubuntu Server" loading="lazy">
+                    <img src="https://cdn.worldvectorlogo.com/logos/ubuntu-4.svg" alt="Soporte Ubuntu Server" loading="lazy">
                 </div>
                 <div class="soporte-contenido">
                     <h3>Soporte Ubuntu Server</h3>
@@ -97,7 +97,7 @@
             <!-- Soporte MikroTik -->
             <div class="soporte-card" data-categoria="redes" data-nombre="mikrotik">
                 <div class="soporte-imagen">
-                    <img src="https://mikrotik.com/img/mtv2/newlogo.svg" alt="Soporte MikroTik" loading="lazy">
+                    <img src="https://static-00.iconduck.com/assets.00/mikrotik-icon-1921x2048-1eai97he.png" alt="Soporte MikroTik" loading="lazy">
                 </div>
                 <div class="soporte-contenido">
                     <h3>Soporte MikroTik</h3>
@@ -116,7 +116,7 @@
             <!-- Soporte OLTs -->
             <div class="soporte-card" data-categoria="redes" data-nombre="olts">
                 <div class="soporte-imagen">
-                    <img src="https://e.huawei.com/marketingcloud/pep/static/assets/img/logo_huawei.png" alt="Soporte OLTs" loading="lazy">
+                    <img src="https://w7.pngwing.com/pngs/68/589/png-transparent-huawei-logo-huawei-logo-huawei-logo-thumbnail.png" alt="Soporte OLTs" loading="lazy">
                 </div>
                 <div class="soporte-contenido">
                     <h3>Soporte OLTs</h3>
