--- a/html/soporte.html
+++ b/html/soporte.html
@@ -43,12 +43,12 @@
                     <img src="https://cdn.cesbo.com/logo.svg" alt="Soporte Astra" loading="lazy">
                 </div>
                 <div class="soporte-contenido">
-                    <h3>Soporte Astra</h3>
+                    <h3>Soporte Cesbo Astra</h3>
                     <ul class="servicios-incluidos">
                         <li><i class="fas fa-check"></i> Instalación y configuración</li>
-                        <li><i class="fas fa-check"></i> Solución de problemas</li>
-                        <li><i class="fas fa-check"></i> Actualizaciones</li>
-                        <li><i class="fas fa-check"></i> Optimización de performance</li>
+                        <li><i class="fas fa-check"></i> Diagnóstico </li>
+                        <li><i class="fas fa-check"></i> Mantenimiento </li>
+                        <li><i class="fas fa-check"></i> Optimización </li>
                     </ul>
                     <button class="btn-soporte">
                         <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
@@ -66,7 +66,7 @@
                     <ul class="servicios-incluidos">
                         <li><i class="fas fa-check"></i> Configuración inicial</li>
                         <li><i class="fas fa-check"></i> Administración de paneles</li>
-                        <li><i class="fas fa-check"></i> Problemas de conexión</li>
+                        <li><i class="fas fa-check"></i> Mantenimiento</li>
                         <li><i class="fas fa-check"></i> Balanceo de carga</li>
                     </ul>
                     <button class="btn-soporte">
@@ -84,9 +84,9 @@
                     <h3>Soporte Ubuntu Server</h3>
                     <ul class="servicios-incluidos">
                         <li><i class="fas fa-check"></i> Instalación y configuración</li>
-                        <li><i class="fas fa-check"></i> Seguridad y hardening</li>
-                        <li><i class="fas fa-check"></i> Optimización de servidores</li>
-                        <li><i class="fas fa-check"></i> Resolución de problemas</li>
+                        <li><i class="fas fa-check"></i> Diagnóstico</li>
+                        <li><i class="fas fa-check"></i> Mantenimiento </li>
+                        <li><i class="fas fa-check"></i> Optimización</li>
                     </ul>
                     <button class="btn-soporte">
                         <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
@@ -104,8 +104,8 @@
                     <ul class="servicios-incluidos">
                         <li><i class="fas fa-check"></i> Configuración de routers</li>
                         <li><i class="fas fa-check"></i> Firewall y QoS</li>
-                        <li><i class="fas fa-check"></i> VPN (PPTP, L2TP, SSTP)</li>
-                        <li><i class="fas fa-check"></i> Optimización de redes</li>
+                        <li><i class="fas fa-check"></i> Balanceo (ECMP,PCC, Nth ,Failover)</li>
+                        <li><i class="fas fa-check"></i> Diagnósticos</li>
                     </ul>
                     <button class="btn-soporte">
                         <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
@@ -121,10 +121,10 @@
                 <div class="soporte-contenido">
                     <h3>Soporte OLTs</h3>
                     <ul class="servicios-incluidos">
-                        <li><i class="fas fa-check"></i> Configuración básica</li>
-                        <li><i class="fas fa-check"></i> Gestión de ONUs</li>
-                        <li><i class="fas fa-check"></i> Problemas de conectividad</li>
-                        <li><i class="fas fa-check"></i> Monitoreo y mantenimiento</li>
+                        <li><i class="fas fa-check"></i> Configuración </li>
+                        <li><i class="fas fa-check"></i> Diagnóstico</li>
+                        <li><i class="fas fa-check"></i> Mantenimiento</li>
+                        <li><i class="fas fa-check"></i> Optimización</li>
                     </ul>
                     <button class="btn-soporte">
                         <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
