--- a/html/licencia.html
+++ b/html/licencia.html
@@ -50,24 +50,21 @@
                         <p>Panel de administración completo para sistemas IPTV con soporte para múltiples servidores y usuarios.</p>
                     </div>
                     <ul class="caracteristicas-licencia">
-                        <li><i class="fas fa-check"></i> Control total de usuarios</li>
-                        <li><i class="fas fa-check"></i> Gestión de paquetes</li>
-                        <li><i class="fas fa-check"></i> Estadísticas avanzadas</li>
-                        <li><i class="fas fa-check"></i> Soporte multi-servidor</li>
+                        <li><i class="fas fa-check"></i> Control de usuarios</li>
+                        <li><i class="fas fa-check"></i> Estadísticas en tiempo real</li>
+                        <li><i class="fas fa-check"></i> One-servidor</li>
+                        <li><i class="fas fa-check"></i> Sin interruciones</li>
                     </ul>
                     <div class="precios-licencia">
                         <div class="opcion-precio">
-                            <span class="duracion">1 Año</span>
-                            <span class="precio">$120 USD</span>
+                            <span class="duracion">1 Meses</span>
+                            <span class="precio">$25 USD</span>
                         </div>
                         <div class="opcion-precio destacado">
-                            <span class="duracion">2 Años</span>
-                            <span class="precio">$200 USD <small>(Ahorra $40)</small></span>
+                            <span class="duracion">2 Meses</span>
+                            <span class="precio">$35 USD <small>(Ahorra $10)</small></span>
                         </div>
-                        <div class="opcion-precio">
-                            <span class="duracion">Vitalicia</span>
-                            <span class="precio">$350 USD</span>
-                        </div>
+                    
                     </div>
                     <button class="btn-licencia">Consultar</button>
                 </div>
