--- a/html/licencia.html
+++ b/html/licencia.html
@@ -47,7 +47,7 @@
                 <div class="licencia-info">
                     <h3>Astra Panel</h3>
                     <div class="licencia-descripcion">
-                        <p>Panel de administración completo para sistemas IPTV con soporte para múltiples servidores y usuarios.</p>
+                        <p>Panel de administración completo para sistemas IPTV.</p>
                     </div>
                     <ul class="caracteristicas-licencia">
                         <li><i class="fas fa-check"></i> Control de usuarios</li>
