--- a/html/servidores.html
+++ b/html/servidores.html
@@ -12,8 +12,9 @@
 
     <header class="servidores-header">
         <div class="container">
-            <h1>Equipos Especializados</h1>
-            <p>Soluciones profesionales para sistemas IPTV/CATV</p>
+            <h1>Equipos Recomendados</h1>
+            <p>Todo lo que necesitas para que tu sistema IPTV/CATV funcione al 100%.
+            </p>
             <a href="../index.html" class="btn-volver"><i class="fas fa-arrow-left"></i> Volver al inicio</a>
         </div>
     </header>
@@ -39,19 +40,19 @@
                 <!-- Servidor 1 -->
                 <div class="servidor-card" data-categoria="servidores">
                     <div class="servidor-imagen">
-                        <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31" alt="Servidor IPTV Pro" loading="lazy">
+                        <img src="https://http2.mlstatic.com/D_NQ_NP_2X_700621-MCO80453126227_112024-F.webp" alt="Servidor IPTV Pro" loading="lazy">
                     </div>
                     <div class="servidor-info">
-                        <h3>XTREAM PRO SERVER</h3>
+                        <h3>HP </h3>
                         <ul class="caracteristicas">
-                            <li><i class="fas fa-microchip"></i> Procesador: Intel Xeon 6 núcleos</li>
-                            <li><i class="fas fa-memory"></i> Memoria: 32GB DDR4 ECC</li>
-                            <li><i class="fas fa-hdd"></i> Almacenamiento: 2x 1TB NVMe SSD (RAID 1)</li>
-                            <li><i class="fas fa-network-wired"></i> Red: Dual 10Gbps SFP+</li>
+                            <li><i class="fas fa-microchip"></i> Procesador: Dos Intel Xeon E5-2680 v3.</li>
+                            <li><i class="fas fa-memory"></i> Memoria: 32gb DDR 4</li>
+                            <li><i class="fas fa-hdd"></i> Almacenamiento: 8 x 1TB HHD/SSD (RAID 60)</li>
+                            <li><i class="fas fa-network-wired"></i> Red: 4 X 10 Gigabit Ethernet+</li>
                             <li><i class="fas fa-users"></i> Conexiones: 1000+ usuarios</li>
-                            <li><i class="fas fa-tv"></i> Software: Xtream UI, Flussonic</li>
+                            <li><i class="fas fa-tv"></i> Software: Xtream UI,Cesbo Astra </li>
                         </ul>
-                        <div class="precio">$2,799 USD</div>
+                        <div class="precio">$--- USD</div>
                        
                     </div>
                 </div>
