--- a/html/servidores.html
+++ b/html/servidores.html
@@ -43,7 +43,7 @@
                         <img src="https://http2.mlstatic.com/D_NQ_NP_2X_700621-MCO80453126227_112024-F.webp" alt="Servidor IPTV Pro" loading="lazy">
                     </div>
                     <div class="servidor-info">
-                        <h3>HP </h3>
+                        <h3>Hp Dl360 Gen9 X2</h3>
                         <ul class="caracteristicas">
                             <li><i class="fas fa-microchip"></i> Procesador: Dos Intel Xeon E5-2680 v3.</li>
                             <li><i class="fas fa-memory"></i> Memoria: 32gb DDR 4</li>
