--- a/html/servidores.html
+++ b/html/servidores.html
@@ -40,7 +40,7 @@
                 <!-- Servidor 1 -->
                 <div class="servidor-card" data-categoria="servidores">
                     <div class="servidor-imagen">
-                        <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcTMMKM16JECz6-eW1bWwXRbrgmo9Z6ZZeZf1p0wGg_sghD0GEhgYmSvw9motNpBmxaCcfVdGXNgHink4xFMLqry-fbLwtuX35PFfp41jstAVyJ8WSZAlxPb1Q&usqp=CAE" alt="Servidor IPTV Pro" loading="lazy">
+                        <img src="https://leader112.com/media/image600x600/product_default/12023/19.jpg" alt="Servidor IPTV Pro" loading="lazy">
                     </div>
                     <div class="servidor-info">
                         <h3>Hp Dl360 Gen9 X2</h3>
