--- a/html/servidores.html
+++ b/html/servidores.html
@@ -60,17 +60,18 @@
                 <!-- Servidor 2 -->
                 <div class="servidor-card" data-categoria="servidores">
                     <div class="servidor-imagen">
-                        <img src="https://http2.mlstatic.com/D_NQ_NP_2X_704859-MCO82155153255_012025-T.webp" alt="Servidor Enterprise" loading="lazy">
+                        <img src="https://mymsystech.com.co/14118-medium_default/servidor-del-ldell-poweredge-t150.jpg" alt="Servidor Enterprise" loading="lazy">
                     </div>
                     <div class="servidor-info">
-                        <h3>ENTERPRISE SERVER</h3>
+                        <h3> DELL POWEREDGE T150 </h3>
                         <ul class="caracteristicas">
-                            <li><i class="fas fa-microchip"></i> Procesador: Dual Xeon 16 núcleos</li>
-                            <li><i class="fas fa-memory"></i> Memoria: 64GB DDR4 ECC</li>
-                            <li><i class="fas fa-hdd"></i> Almacenamiento: 4x 2TB SSD (RAID 10)</li>
-                            <li><i class="fas fa-network-wired"></i> Red: Quad 10Gbps</li>
-                            <li><i class="fas fa-users"></i> Conexiones: 5000+ usuarios</li>
-                            <li><i class="fas fa-project-diagram"></i> Cluster ready, Load Balancing</li>
+                            <li><i class="fas fa-microchip"></i> Xeon E-2324G (4C/4T)</li>
+                            <li><i class="fas fa-memory"></i> 16GB DDR4 ECC</li>
+                            <li><i class="fas fa-hdd"></i> 1TB HDD 7.2K</li>
+                            <li><i class="fas fa-network-wired"></i> 4 x Gigabit LAN</li>
+                            <li><i class="fas fa-users"></i> Hasta 200 usuarios</li> 
+                            <li><i class="fas fa-tv"></i> Xtream UI, Cesbo Astra</li>
+                            
                         </ul>
                         <div class="precio">$ ---- USD</div>
                      
