--- a/html/servidores.html
+++ b/html/servidores.html
@@ -89,7 +89,7 @@
                 <!-- Tarjeta 1 -->
                 <div class="servidor-card" data-categoria="tbs">
                     <div class="servidor-imagen">
-                        <img src="https://www.tbsdtv.com/images/products/tbs6908_xlarge.jpg" alt="TBS 6908" loading="lazy">
+                        <img src="https://media.xbyte.com//servers/Dell-PowerEdge-T150-Server-Tower_01.png" alt="TBS 6908" loading="lazy">
                     </div>
                     <div class="servidor-info">
                         <h3>TBS 6908 Octo Tuner</h3>
