--- a/html/servidores.html
+++ b/html/servidores.html
@@ -60,16 +60,16 @@
                 <!-- Servidor 2 -->
                 <div class="servidor-card" data-categoria="servidores">
                     <div class="servidor-imagen">
-                        <img src="https://http2.mlstatic.com/D_NQ_NP_656000-MLV52140908590_102022-O.webp" alt="Servidor Enterprise" loading="lazy">
+                        <img src="https://pcmarketperu.com/tienda/86-large_default/servidor-dell-poweredge-t150-xeon-e-2336-29-ghz-12mb-16gb-3200mts-1x-4tb-sata-72k.jpg" alt="Servidor Enterprise" loading="lazy">
                     </div>
                     <div class="servidor-info">
                         <h3> DELL POWEREDGE T150 </h3>
                         <ul class="caracteristicas">
                             <li><i class="fas fa-microchip"></i> Xeon E-2324G (4C/4T)</li>
                             <li><i class="fas fa-memory"></i> 16GB DDR4 ECC</li>
-                            <li><i class="fas fa-hdd"></i> 1TB HDD 7.2K</li>
+                            <li><i class="fas fa-hdd"></i> 1TB HDD/SSD</li>
                             <li><i class="fas fa-network-wired"></i> 4 x Gigabit LAN</li>
-                            <li><i class="fas fa-users"></i> Hasta 200 usuarios</li> 
+                            <li><i class="fas fa-users"></i> Hasta 300 usuarios</li> 
                             <li><i class="fas fa-tv"></i> Xtream UI, Cesbo Astra</li>
                             
                         </ul>
