--- a/html/servidores.html
+++ b/html/servidores.html
@@ -65,11 +65,11 @@
                     <div class="servidor-info">
                         <h3> DELL POWEREDGE T150 </h3>
                         <ul class="caracteristicas">
-                            <li><i class="fas fa-microchip"></i> Xeon E-2324G (4C/4T)</li>
-                            <li><i class="fas fa-memory"></i> 16GB DDR4 ECC</li>
-                            <li><i class="fas fa-hdd"></i> 1TB HDD/SSD</li>
-                            <li><i class="fas fa-network-wired"></i> 4 x Gigabit LAN</li>
-                            <li><i class="fas fa-users"></i> Hasta 300 usuarios</li> 
+                            <li><i class="fas fa-microchip"></i> Procesador :Xeon E-2324G (4C/4T)</li>
+                            <li><i class="fas fa-memory"></i> Memoria: 16GB DDR4 ECC</li>
+                            <li><i class="fas fa-hdd"></i>Almacenamiento: 1TB HDD/SSD</li>
+                            <li><i class="fas fa-network-wired"></i> Red: 4 x Gigabit Ethernet </li>
+                            <li><i class="fas fa-users"></i> Conexiones: 300 usuarios</li> 
                             <li><i class="fas fa-tv"></i> Xtream UI, Cesbo Astra</li>
                             
                         </ul>
