add tarjeta tbs 6909x-

--- a/html/servidores.html
+++ b/html/servidores.html
@@ -89,17 +89,17 @@
                 <!-- Tarjeta 1 -->
                 <div class="servidor-card" data-categoria="tbs">
                     <div class="servidor-imagen">
-                        <img src="https://media.xbyte.com//servers/Dell-PowerEdge-T150-Server-Tower_01.png" alt="TBS 6908" loading="lazy">
+                        <img src="https://www.tbsdtv.com/products/images/tbs6909xv2/tbs6909xv2_1.jpg" alt="TBS 6908" loading="lazy">
                     </div>
                     <div class="servidor-info">
                         <h3>TBS 6908 Octo Tuner</h3>
                         <ul class="caracteristicas">
-                            <li><i class="fas fa-satellite"></i> 8 sintonizadores independientes</li>
+                            <li><i class="fas fa-satellite"></i> 8 Sintonizadores independientes</li>
                             <li><i class="fas fa-tachometer-alt"></i> Soporte DVB-S2/S2X</li>
                             <li><i class="fas fa-microchip"></i> Chipset: Montage M88DS3103</li>
-                            <li><i class="fas fa-plug"></i> Interface: PCIe x8</li>
+                            <li><i class="fas fa-plug"></i> Interface: PCIe </li>
                             <li><i class="fas fa-code"></i> Compatible: Linux/Windows</li>
-                            <li><i class="fas fa-wifi"></i> Blindaje RF profesional</li>
+                            <li><i class="fas fa-tv"></i> Canales: + 80 </li>
                         </ul>
                         <div class="precio">$ ----- USD</div>
                    
