--- a/html/servidores.html
+++ b/html/servidores.html
@@ -92,7 +92,7 @@
                         <img src="https://www.tbsdtv.com/products/images/tbs6909xv2/tbs6909xv2_1.jpg" alt="TBS 6908" loading="lazy">
                     </div>
                     <div class="servidor-info">
-                        <h3>TBS 6908 Octo Tuner</h3>
+                        <h3>TBS6909-X V2 DVB-S2X/S2/S</h3>
                         <ul class="caracteristicas">
                             <li><i class="fas fa-satellite"></i> 8 Sintonizadores independientes</li>
                             <li><i class="fas fa-tachometer-alt"></i> Soporte DVB-S2/S2X</li>
