--- a/html/servidores.html
+++ b/html/servidores.html
@@ -109,17 +109,17 @@
                 <!-- Tarjeta 2 -->
                 <div class="servidor-card" data-categoria="tbs">
                     <div class="servidor-imagen">
-                        <img src="https://www.tbsdtv.com/images/products/tbs6903_xlarge.jpg" alt="TBS 6903" loading="lazy">
+                        <img src="https://www.tbsdtv.com/products/images/tbs6205/tbs6205_2.jpg" alt="TBS 6903" loading="lazy">
                     </div>
                     <div class="servidor-info">
-                        <h3>TBS 6903 Quad Tuner</h3>
+                        <h3>TBS6205 DVB-T2/T/C Quad TV</h3>
                         <ul class="caracteristicas">
                             <li><i class="fas fa-satellite"></i> 4 sintonizadores independientes</li>
                             <li><i class="fas fa-tachometer-alt"></i> Soporte DVB-S2/S2X</li>
                             <li><i class="fas fa-microchip"></i> Chipset: Montage M88DS3103</li>
-                            <li><i class="fas fa-plug"></i> Interface: PCIe x4</li>
+                            <li><i class="fas fa-plug"></i> Interface: PCIe </li>
                             <li><i class="fas fa-code"></i> Compatible: Linux/Windows</li>
-                            <li><i class="fas fa-bolt"></i> Bajo consumo energético</li>
+                            <li><i class="fas fa-tv"></i> Canales: + 30 </li>
                         </ul>
                         <div class="precio">$ ---- USD</div>
                 
