--- a/html/servidores.html
+++ b/html/servidores.html
@@ -137,17 +137,15 @@
                 <!-- LNB 1 -->
                 <div class="servidor-card" data-categoria="lnb">
                     <div class="servidor-imagen">
-                        <img src="https://m.media-amazon.com/images/I/71QY6X4Rg9L._AC_UF1000,1000_QL80_.jpg" alt="LNB Twin" loading="lazy">
+                        <img src="https://http2.mlstatic.com/D_NQ_NP_2X_953818-MCO53754903415_022023-F.webp" alt="LNB Twin" loading="lazy">
                     </div>
                     <div class="servidor-info">
-                        <h3>LNB Twin Profesional</h3>
+                        <h3>Lnb Ku Universal 4 (UHD 4K QUAD)</h3>
                         <ul class="caracteristicas">
-                            <li><i class="fas fa-signal"></i> Frecuencia: 10.7-12.75 GHz</li>
-                            <li><i class="fas fa-sliders-h"></i> Noise Figure: 0.1dB</li>
-                            <li><i class="fas fa-plug"></i> 2 salidas independientes</li>
+                            <li><i class="fas fa-signal"></i> Frecuencia: 10.7 – 12.75 GHz</li>
+                            <li><i class="fas fa-sliders-h"></i> Noise Figure: 0.1 – 0.3 dB</li>
+                            <li><i class="fas fa-plug"></i> 4 salidas independientes</li>
                             <li><i class="fas fa-bolt"></i> Voltaje: 11-20V</li>
-                            <li><i class="fas fa-sun"></i> Protección UV</li>
-                            <li><i class="fas fa-shield-alt"></i> Resistente a la intemperie</li>
                         </ul>
                         <div class="precio">$ ---- USD</div>
                       
