--- a/html/servidores.html
+++ b/html/servidores.html
@@ -140,7 +140,7 @@
                         <img src="https://http2.mlstatic.com/D_NQ_NP_2X_953818-MCO53754903415_022023-F.webp" alt="LNB Twin" loading="lazy">
                     </div>
                     <div class="servidor-info">
-                        <h3>Lnb Ku Universal 4 (UHD 4K QUAD)</h3>
+                        <h3>Lnb Ku Universal (UHD 4K QUAD IT-22)</h3>
                         <ul class="caracteristicas">
                             <li><i class="fas fa-signal"></i> Frecuencia: 10.7 – 12.75 GHz</li>
                             <li><i class="fas fa-sliders-h"></i> Noise Figure: 0.1 – 0.3 dB</li>
@@ -155,17 +155,15 @@
                 <!-- LNB 2 -->
                 <div class="servidor-card" data-categoria="lnb">
                     <div class="servidor-imagen">
-                        <img src="https://m.media-amazon.com/images/I/61+Q6RhB9QL._AC_UF1000,1000_QL80_.jpg" alt="LNB Quad" loading="lazy">
+                        <img src="https://http2.mlstatic.com/D_NQ_NP_2X_810110-MCO53754759317_022023-F.webp" alt="LNB Quad" loading="lazy">
                     </div>
                     <div class="servidor-info">
-                        <h3>LNB Quad Premium</h3>
+                        <h3>Lnb Ku Universal (UHD 4K DUAL IT-22)</h3>
                         <ul class="caracteristicas">
-                            <li><i class="fas fa-signal"></i> Frecuencia: 10.7-12.75 GHz</li>
-                            <li><i class="fas fa-sliders-h"></i> Noise Figure: 0.2dB</li>
-                            <li><i class="fas fa-plug"></i> 4 salidas independientes</li>
+                            <li><i class="fas fa-signal"></i> Frecuencia: 10.7 – 12.75 GHz</li>
+                            <li><i class="fas fa-sliders-h"></i> Noise Figure: 0.1 – 0.3 dB</li>
+                            <li><i class="fas fa-plug"></i> 2 salidas independientes</li>
                             <li><i class="fas fa-bolt"></i> Voltaje: 11-20V</li>
-                            <li><i class="fas fa-temperature-low"></i> Rango: -40°C a +60°C</li>
-                            <li><i class="fas fa-tint"></i> Protección IP55</li>
                         </ul>
                         <div class="precio">$ ---- USD</div>
                        
