--- a/html/servidores.html
+++ b/html/servidores.html
@@ -27,7 +27,7 @@
                 <button class="filtro-btn" onclick="filtrarServidores('servidores')">Servidores</button>
                 <button class="filtro-btn" onclick="filtrarServidores('tbs')">Tarjetas TBS</button>
                 <button class="filtro-btn" onclick="filtrarServidores('lnb')">LNB</button>
-                <button class="filtro-btn" onclick="filtrarServidores('antenas')">Antenas</button>
+                <!-- <button class="filtro-btn" onclick="filtrarServidores('antenas')">Antenas</button> -->
             </div>
         </div>
 
